kubernetes/network-policies/allow-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ycsec-allow-dns-egress
  namespace: ycsec-hardened
  labels:
    app.kubernetes.io/part-of: ycsec
    ycsec.io/profile: hardened
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
